Рефактор бизнес-логики. Парсинг валют Центробанка.
